# flake8-f-string

./: .gitignore  README.md  flake8_f_string.py  requirements-dev.txt  setup.cfg
tests/: test_flake8_f_string.py
