[metadata]
name = flake8-f-string
version = 0.1.0
description = flake8 plugin which checks formatted string
long_description = file: README.md
long_description_content_type = text/markdown
author = Anuar Akhmetov
author_email = akhmetov.anuar09@gmail.com
license = MIT
license_file = LICENSE
url = https://github.com/An4ik/flake8-f-string
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
py_modules = flake8_f_string
install_requires =
    flake8>=3.5
    importlib-metadata>=0.9;python_version<"3.6"
python_requires = >=3.3

[options.entry_points]
flake8.extension =
    ERG=flake8_f_string:Plugin